# wl-mitm

./: Cargo.toml  README.md  build.rs  config.toml  generate.sh  update-proto.sh
contrib/: ask-bemenu.sh  flatpak-wl-mitm  notify-libnotify.sh
protogen/: Cargo.toml
protogen/src/: lib.rs  main.rs  types.rs
src/: codec.rs  config.rs  io_util.rs  main.rs  objects.rs  proto.rs  state.rs
