[package]
name = "wl-mitm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
bytes = "1.10.0"
nix = "0.29.0"
sendfd = { version = "0.4", features = [ "tokio" ] }
tokio = { version = "1.43.0", features = [ "net", "rt", "rt-multi-thread", "macros" ]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
