[package]
name = "wl-mitm"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["protogen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
bytes = "1.10.0"
fixed = { version = "1.29.0", features = [ "serde" ]  }
nix = "0.29.0"
sendfd = { version = "0.4", features = [ "tokio" ] }
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = [ "fs", "net", "rt", "rt-multi-thread", "macros", "io-util", "process" ]}
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
protogen = { version = "0.1.0", path = "protogen" }
